--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,17 +11,18 @@ permissions:
 jobs:
   deploy:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout repo
+      - name: Checkout repository
         uses: actions/checkout@v3
 
       - name: Setup Pages
         uses: actions/configure-pages@v3
 
-      - name: Upload files
+      - name: Upload static site
         uses: actions/upload-pages-artifact@v1
         with:
-          path: .
+          path: .  # Use '.' if your index.html is in the root folder
 
       - name: Deploy to GitHub Pages
         id: deployment
