--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,3 @@
-# .github/workflows/deploy.yml
 name: Deploy static site
 
 on:
@@ -18,4 +17,6 @@ jobs:
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: .   # or 'dist', 'build', etc. if your HTML is inside a subfolder
+          publish_dir: .
+          user_name: AditiSharma1524 # Replace with your GitHub username
+          user_email: aditisharma152425@gmail.com  # Use your GitHub email
